# pipetex

./: .flake8  .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
custom_workflow/: deploy_doc.sh  update_styleguide.sh
docs/: requirements.aux  requirements.ist  requirements.tex  requirements.toc
docs/GLOSSARY/: glossary.sty
docs/PARTS/: introduction.tex  requirements_and_usecases.tex
docs/STYLE/: formales_deckblatt.sty  packages.sty
documentation/: log_file.txt  requirements.tex  styleguide.tex
documentation/PARTS/: introduction.tex  requirements_and_usecases.tex  style_descitions.tex  style_intro.tex
documentation/STYLE/: packages.sty  settings.sty
documentation/pdocs/: index.html  search.js
documentation/pdocs/pipetex/: __init__.html  __pycache__.html  enums.html  exceptions.html  main.html  operations.html  pipeline.html
src/pipetex/: enums.py  exceptions.py  main.py  operations.py  pipeline.py
src/pipetex/operations/: operations.py
src/pipetex/utils/: enums.py  exceptions.py
tests/: shared_fixtures.py  test_compilation_operations.py  test_operations.py  test_pipeline.py  util_functions.py
tests/test_assets/: test_file.tex  test_file_bib.bcf
tests/test_assets/bib_assets/: test_file_bib.bib  test_file_bib.tex
tests/test_assets/glo_assets/: test_file_glo.ist  test_file_glo.tex
tests/test_assets/tex_assets/: test_file_no_draft.tex
tests/test_helpers/: util_functions.py
