[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pipetex"
version = "0.0.1"
authors = [
  { name="Max Weise", email="maxfencing@web.de" },
]
description = "Python CLI application which supports the workflow with LaTeX documents"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
strategy_pattern = "pipetex.main:main"
