[metadata]
name = pipetex
discription = Pipeline for LaTeX documents
author = Max Weise
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    pipetex
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    pipetex = pipetex.main:main

[options.extras_require]
testing = 
    pytest>=6.8
    pytest-cov>=2.0
    mypy>=0.190
    flake8>=3.9
    tox>=3.24


